# pii-guard

./: LICENSE  README.md  pyproject.toml
benchmarks/: vs_presidio.py
examples/: basic_usage.py  fastapi_middleware.py  langchain_integration.py
pii_guard/: __init__.py  anonymizer.py  cli.py  detector.py  entities.py  fake_data.py
tests/: __init__.py  test_anonymizer.py  test_detector.py
